crates/uitest/fixtures/mir_check/borrowck_read_under_mut.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_read_under_mut.fe
---
error[11-0002]: borrow conflict in `fn borrowck_read_under_mut`
  ┌─ borrowck_read_under_mut.fe:6:5
  │
5 │     let p: mut u256 = mut x
  │                           - `x` is borrowed here
6 │     let y: u256 = x
  │     ^^^^^^^^^^^^^^^ access overlaps an active `mut` borrow
